# otc-component-scanner

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: index.rst  install.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
otc_component_scanner/: __init__.py  quay.py  scanner.py  utils.py  zuul.py
otc_component_scanner/analyzers/: __init__.py
otc_component_scanner/analyzers/sbom/: cyclonedx.py  syft.py
otc_component_scanner/cli/: quay.py  scanner.py
otc_component_scanner/reporters/: dependencytrack.py
otc_component_scanner/tests/: test_sec-scanner.py
releasenotes/source/: conf.py  index.rst
