[metadata]
name = otc-component-scanner
summary = OpenTelekomCloud Boilerplate contains all the boilerplate you need to create an OpenTelekomCloud package.
description_file =
    README.rst
author = Open Telekom Cloud
home_page = https://open.telekom.cloud/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = otc_component_scanner

[options.entry_points]
console_scripts =
  otc-component-scanner = otc_component_scanner.cli.scanner:main
  otc-image-scanner = otc_component_scanner.cli.quay:main
